[package]
name = "grekko"
version = "0.1.0"
authors = ["Donovan <awesomealpineibex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrp-pragmatic = "1.1.0"
vrp-core = "1.1.0"
serde_json = "1.0.52"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.2"
csv = "1.1.3"
