[package]
name = "grekko"
version = "0.1.0"
authors = ["Donovan <awesomealpineibex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrp-pragmatic = "1.1.1"
vrp-core = "1.1.1"
serde_json = "1.0.53"
serde = { version = "1.0.110", features = ["derive"] }
tokio = { version = "0.2.20", features = ["macros"] }
warp = "0.2.2"
csv = "1.1.3"
cached = "0.12.0"
lru = "0.4.3"
chrono = "0.4.11"
redis = "0.16.0"
rayon = "1.3.0"