[package]
name = "grekko"
version = "0.1.0"
authors = ["Donovan <awesomealpineibex@gmail.com>"]
edition = "2018"

[profile.release]
panic = "abort"
[profile.dev]
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
vrp-pragmatic = "1.2.4"
vrp-core = "1.2.4"
serde_json = "1.0.53"
serde = { version = "1.0.110", features = ["derive"] }
tokio = { version = "0.2.20", features = ["rt-threaded", "macros"] }
warp = "0.2.3"
csv = "1.1.3"
cached = "0.12.0"
chrono = "0.4.11"
redis = "0.16.0"
rayon = "1.3.0"
osrm = { path = "/Volumes/dev/osrm-rs" }
reqwest = "0.10.6"
failure = "0.1.8"
alcoholic_jwt = "1.0.0"
jsonwebtoken = "7.2.0"